[workspace]
resolver = "2"
members = ["p256-cm4", "testsuite", "qemu-decode"]
default-members = ["p256-cm4"]

[workspace.package]
edition = "2024"
authors = ["Alex Martens <alex@thinglab.org>"]
repository = "https://github.com/newAM/p256-cm4"
license = "MIT"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3 
overflow-checks = false
