[package]
name = "p256-cm4"
description = "P256-Cortex-M4 re-written in rust"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabi"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
use-mul-for-sqr = [ ]
fpu = [ ]

[dependencies]
cfg-if = { version = "1.0.3", default-features = false }
