[package]
name = "p256-cm4"
description = "P256-Cortex-M4 re-written in rust"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabi"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
use-mul-for-sqr = [ ]
fpu = [ ]
rfc6979 = [ "dep:rfc6979", "dep:sha2" ]

[dependencies]
cfg-if = { version = "1.0.3", default-features = false }
defmt = { version = "1.0", optional = true }
p256 = { version = "0.14.0-rc.0", default-features = false, features = [ "ecdsa" ], optional = true }
rfc6979 = { version = "0.5.0-rc.2", default-features = false, optional = true }
sha2 = { version = "0.11.0-rc.2", default-features = false, optional = true }
signature = { version = "3.0.0-rc.4", features = ["digest"], optional = true }
